<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="kmitl.esl.ultimate.wifirobot.ControlScreen"
    android:id="@+id/constraintLayout4">

    <Button
        android:layout_width="88dp"
        android:layout_height="75dp"
        android:id="@+id/upBtn"
        android:text="@string/upSym"
        android:textSize="60sp"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout4"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout4"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout4"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:layout_width="88dp"
        android:layout_height="75dp"
        android:id="@+id/leftBtn"
        android:text="@string/leftSym"
        android:textSize="50sp"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout4"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/upBtn"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toLeftOf="@+id/upBtn"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/downBtn"
        android:layout_marginBottom="8dp" />

    <Button
        android:layout_width="88dp"
        android:layout_height="75dp"
        android:id="@+id/rightBtn"
        android:text="@string/rightSym"
        android:textSize="50sp"
        app:layout_constraintLeft_toRightOf="@+id/upBtn"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/upBtn"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout4"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/downBtn"
        android:layout_marginBottom="8dp" />

    <Button
        android:layout_width="88dp"
        android:layout_height="75dp"
        android:id="@+id/downBtn"
        android:text="@string/downSym"
        android:textSize="35sp"
        app:layout_constraintLeft_toRightOf="@+id/leftBtn"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/upBtn"
        android:layout_marginTop="128dp"
        app:layout_constraintRight_toLeftOf="@+id/rightBtn"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/capture"
        android:id="@+id/cptBtn"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout4"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout4"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout4"
        android:layout_marginBottom="120dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/responseTest"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout4"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cptBtn"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout4"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout4"
        android:layout_marginBottom="16dp" />

</android.support.constraint.ConstraintLayout>
